Change to tailwindcss and add some basic testing

--- a/content/about.adoc
+++ b/content/about.adoc
@@ -1,9 +1,13 @@
+:bl: pass:[ +]
 = About
 
-🧗‍♂️ Hi! My name is Maik. I'm a Software Engineer and a Chaos Monkey. I studied at https://www.hdm-stuttgart.de/[HdM Stuttgart] where I graduated with a Bachelor degree in audiovisual media and a Master's degree in electronic media with a strong focus on visual effects and software development.
+🧗‍♂️ Hi! My name is Maik 👋. I'm a Software Engineer and a Chaos Engineer. I studied at https://www.hdm-stuttgart.de/[HdM Stuttgart] where I graduated with a Bachelor degree in audiovisual media and a Master's degree in electronic media with a strong focus on visual effects and software development.
 
+{bl}
 🏗 I work at https://www.codecentric.de/[codecentric AG] as an full time IT Consultant and Chaos Engineer.
 
+{bl}
 🎙 I love giving talks and workshops about Chaos Engineering. 
 
+{bl}
 👻 Oh and I stutter, so what could possibly go wrong?
